[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["demilich <xnemesisx@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"
# need current 'master' of rayon as the .step_by functionality is not yet released
# at the time when this code was written rayon 1.3.0 was released on crates.io which did not contain the required functionality
rayon = { git = "https://github.com/rayon-rs/rayon/"}